@@ -1,6 +1,7 @@
 Version 1.1-1 (2016-03-30)
 
 o covEllipses() extended to more than two variables, giving a scatterplot matrix plot
+o plot.boxM now can plot other measures of the eigenvalues of the covariance matrices.
 
 Version 1.1-0 (2016-03-03)
 
